Replacing one player with a dummy until he reconnects

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,9 @@
+<div class="row">
+	<div class="col-md-12">
+		<div class="alert alert-info alert-tie" role="alert" id="tie" style="display: none;">Your last game ended with a tie&hellip;</div>
+	</div>
+</div>
+
 <div id="section-lobby">
 	<div class="row">
 		<h1 class="col-md-8">Lobby</h1>
@@ -9,7 +15,7 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<div class="alert alert-warning" role="alert" id="loss" style="display: none;">You lost and have to play again, I have put you in the queue again.</div>
+			<div class="alert alert-warning" role="alert" id="loss" style="display: none;">You lost and have to play again, I've put you in the queue again.</div>
 
 			<p>Wait in the queue until we can match you with two other opponents.</p>
 
@@ -40,7 +46,7 @@
 			<p><span id="turn-status"></span> Next mark: <span id="turn-mark"></span></p>
 		</div>
 		<div class="col-md-4 text-right">
-			Remaining: <span id="timer"></span>
+			Time remaining: <span id="timer"></span>
 		</div>
 	</div> <!-- /.row -->
 
