--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,6 +35,11 @@
 
 	<div class="row">
 		<div class="col-md-12">
+			<div class="alert alert-warning" role="alert" id="pause" style="display: none;">
+				Waiting for a player to reconnect.
+				<a href="#" id="leaveAndJoinQueue" class="btn btn-primary">Leave this game</a>
+			</div>
+
 			<div class="alert alert-success" role="alert" id="victory" style="display: none;">
 				You won! The password is: <code class="password" id="password"></code>
 			</div>
@@ -56,8 +61,6 @@
 		</div>
 	</div> <!-- /.row -->
 </div> <!-- /#section-game -->
-
-<p><em>Don't refresh the page, it's not prepared for that!</em></p>
 
 <script src="./bundle.js"></script>
 
