--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-12">
-		<div class="alert alert-info alert-tie" role="alert" id="tie" style="display: none;">Your last game ended with a tie&hellip;</div>
+		<div class="alert alert-info alert-tie" role="alert" id="tie" style="display: none;">Your last game ended with a tie&hellip; or someone left the game.</div>
 	</div>
 </div>
 
@@ -9,6 +9,7 @@
 		<h1 class="col-md-8">Lobby</h1>
 
 		<div class="col-md-4 text-right logout-box">
+			<span class="label label-danger disconnected-warning">Disconnected</span>
 			<a href="/logout">Logout</a>
 		</div>
 	</div> <!-- /.row -->
@@ -29,6 +30,7 @@
 		<h1 class="col-md-8">Game</h1>
 
 		<div class="col-md-4 text-right logout-box">
+			<span class="label label-danger disconnected-warning">Disconnected</span>
 			<a href="/logout">Logout</a>
 		</div>
 	</div> <!-- /.row -->
@@ -37,7 +39,7 @@
 		<div class="col-md-12">
 			<div class="alert alert-warning" role="alert" id="pause" style="display: none;">
 				Waiting for a player to reconnect.
-				<a href="#" id="leaveAndJoinQueue" class="btn btn-primary">Leave this game</a>
+				<a href="#" id="leaveAndJoinQueue" class="btn btn-primary" style="display: none;">Leave this game</a>
 			</div>
 
 			<div class="alert alert-success" role="alert" id="victory" style="display: none;">
