Improved game interface visual

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,11 +49,13 @@
 	</div> <!-- /.row -->
 
 	<div class="row">
-		<div class="col-md-8">
-			<p><span id="turn-status"></span> Next mark: <span id="turn-mark"></span></p>
-		</div>
-		<div class="col-md-4 text-right">
-			Time remaining: <span id="timer"></span>
+		<div class="game-info">
+			<div class="col-md-8">
+				<p><span id="turn-status" class="label"></span> Next mark: <span id="turn-mark" class="turn-mark"></span></p>
+			</div>
+			<div class="col-md-4 text-right">
+				Time remaining: <span id="timer" class="timer"></span>
+			</div>
 		</div>
 	</div> <!-- /.row -->
 
