--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,17 +16,25 @@
 		}
 
 		.table-game td {
-			width: 30px;
-			height: 30px;
+			width: 34px;
+			height: 34px;
 			border: 2px solid #333;
 			cursor: pointer;
 			font-weight: bold;
 			text-align: center;
-			font-size: 20px;
+			font-size: 23px;
 		}
 
 		.alert-tie {
 			margin: 1em 0 0;
+		}
+
+		.game-info {
+			font-size: 3em;
+		}
+
+		.timer, .turn-mark {
+			font-weight: bold;
 		}
 	</style>
 </head>
