--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
 		<div class="col-md-12">
 			<div class="alert alert-warning" role="alert" id="loss" style="display: none;">You lost and have to play again, I've put you in the queue again.</div>
 
-			<p>Wait in the queue until we can match you with two other opponents.</p>
+			<p>Čekej na hru.</p>
 
 			<p>Players waiting: <span id="playersInQueue"></span> (including you)</p>
 		</div>
@@ -38,12 +38,12 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="alert alert-warning" role="alert" id="pause" style="display: none;">
-				Waiting for a player to reconnect.
-				<a href="#" id="leaveAndJoinQueue" class="btn btn-primary" style="display: none;">Leave this game</a>
+				Čekáme na hráče než se znova připojí.
+				<a href="#" id="leaveAndJoinQueue" class="btn btn-primary" style="display: none;">Opustit hru</a>
 			</div>
 
 			<div class="alert alert-success" role="alert" id="victory" style="display: none;">
-				You won! The password is: <code class="password" id="password"></code>
+				Vyhrál/a jsi! Heslo je: <code class="password" id="password"></code>
 			</div>
 		</div>
 	</div> <!-- /.row -->
@@ -51,10 +51,10 @@
 	<div class="row">
 		<div class="game-info">
 			<div class="col-md-8">
-				<p><span id="turn-status" class="label"></span> Next mark: <span id="turn-mark" class="turn-mark"></span></p>
+				<p><span id="turn-status" class="label"></span> Další značka: <span id="turn-mark" class="turn-mark"></span></p>
 			</div>
 			<div class="col-md-4 text-right">
-				Time remaining: <span id="timer" class="timer"></span>
+				Zbývající čas: <span id="timer" class="timer"></span>
 			</div>
 		</div>
 	</div> <!-- /.row -->
