--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-	<h1>Tic Tac Toe</h1>
+	<h1>Losí piškvorky</h1>
 </div> <!-- /.row -->
 
 <div class="row">
@@ -13,7 +13,7 @@
 		</div>
 
 		<div class="form-group">
-			<button type="submit" class="btn btn-primary">Log in</button>
+			<button type="submit" class="btn btn-primary">Přihlásit</button>
 		</div>
 	</form>
 </div> <!-- /.row -->
