Don't tell players how many are there of them

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,9 +18,7 @@
 		<div class="col-md-12">
 			<div class="alert alert-warning" role="alert" id="loss" style="display: none;">You lost and have to play again, I've put you in the queue again.</div>
 
-			<p>Čekej na hru.</p>
-
-			<p>Players waiting: <span id="playersInQueue"></span> (including you)</p>
+			<p>Čekej na hru, hned ti dopojíme losa, který s tebou bude hrát.</p>
 		</div>
 	</div>
 </div> <!-- /#section-lobby -->
@@ -43,7 +41,7 @@
 			</div>
 
 			<div class="alert alert-success" role="alert" id="victory" style="display: none;">
-				Vyhrál/a jsi! Heslo je: <code class="password" id="password"></code>
+				Vyhrál/a jsi! Heslo je: <code class="password" id="password"></code>. <span id="game-explanation"></span>
 			</div>
 		</div>
 	</div> <!-- /.row -->
