--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,18 +18,18 @@
 		<div class="col-md-12">
 			<div class="alert alert-warning" role="alert" id="loss" style="display: none;">You lost and have to play again, I've put you in the queue again.</div>
 
-			<p>Čekej na hru, hned ti dopojíme losa, který s tebou bude hrát.</p>
+			<p>Čekej na hru, hned ti přidělíme losa, který s tebou bude hrát.</p>
 		</div>
 	</div>
 </div> <!-- /#section-lobby -->
 
 <div id="section-game" style="display: none;">
 	<div class="row">
-		<h1 class="col-md-8">Game</h1>
+		<h1 class="col-md-8">Hra</h1>
 
 		<div class="col-md-4 text-right logout-box">
-			<span class="label label-danger disconnected-warning">Disconnected</span>
-			<a href="/logout">Logout</a>
+			<span class="label label-danger disconnected-warning">Server je pokažený</span>
+			<a href="/logout">Odhlásit</a>
 		</div>
 	</div> <!-- /.row -->
 
