Don't maintain XOXO order

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<div class="alert alert-warning" role="alert" id="loss" style="display: none;">You lost and have to play again, I've put you in the queue again.</div>
+			<div class="alert alert-warning" role="alert" id="loss" style="display: none;">Prohrál jsi, čekej na další hru.</div>
 
 			<p>Čekej na hru, hned ti přidělíme losa, který s tebou bude hrát.</p>
 		</div>
