--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,16 @@
 <div class="row">
 	<div class="col-md-12">
-		<div class="alert alert-info alert-tie" role="alert" id="tie" style="display: none;">Your last game ended with a tie&hellip; or someone left the game.</div>
+		<div class="alert alert-info alert-tie" role="alert" id="tie" style="display: none;">Tvoje poslední hra skončila remízou&hellip; nebo některý z losů odešel ze hry.</div>
 	</div>
 </div>
 
 <div id="section-lobby">
 	<div class="row">
-		<h1 class="col-md-8">Lobby</h1>
+		<h1 class="col-md-8">Losí čekárna</h1>
 
 		<div class="col-md-4 text-right logout-box">
-			<span class="label label-danger disconnected-warning">Disconnected</span>
-			<a href="/logout">Logout</a>
+			<span class="label label-danger disconnected-warning">Umřelo spojení, doufáme, že losi ne</span>
+			<a href="/logout">Odhlásit</a>
 		</div>
 	</div> <!-- /.row -->
 
@@ -28,7 +28,7 @@
 		<h1 class="col-md-8">Hra</h1>
 
 		<div class="col-md-4 text-right logout-box">
-			<span class="label label-danger disconnected-warning">Server je pokažený</span>
+			<span class="label label-danger disconnected-warning">Umřelo spojení, doufáme, že losi ne</span>
 			<a href="/logout">Odhlásit</a>
 		</div>
 	</div> <!-- /.row -->
@@ -36,7 +36,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="alert alert-warning" role="alert" id="pause" style="display: none;">
-				Čekáme na hráče než se znova připojí.
+				Čekáme na losa, než se znova připojí.
 				<a href="#" id="leaveAndJoinQueue" class="btn btn-primary" style="display: none;">Opustit hru</a>
 			</div>
 
