--- a/views/index.hbs
+++ b/views/index.hbs
@@ -49,7 +49,7 @@
 	<div class="row">
 		<div class="game-info">
 			<div class="col-md-8">
-				<p><span id="turn-status" class="label"></span> Další značka: <span id="turn-mark" class="turn-mark"></span></p>
+				<p><span id="turn-status" class="label"></span> <span id="">Pokládáš: <span id="turn-mark" class="turn-mark"></span></p>
 			</div>
 			<div class="col-md-4 text-right">
 				Zbývající čas: <span id="timer" class="timer"></span>
